Fix response body of put email template
