# internal/provider/emailtemplate_resource_sdk.go
@@ -192,128 +192,3 @@ func (r *EmailTemplateResourceModel) RefreshFromSharedEmailTemplateEntity(resp *
 		r.UpdatedBy = types.StringPointerValue(resp.UpdatedBy)
 	}
 }
-
-func (r *EmailTemplateResourceModel) ToSharedEmailTemplateEntity() *shared.EmailTemplateEntity {
-	createdAt, _ := time.Parse(time.RFC3339Nano, r.CreatedAt.ValueString())
-	var id string
-	id = r.ID.ValueString()
-
-	var manifest []string = []string{}
-	for _, manifestItem := range r.Manifest {
-		manifest = append(manifest, manifestItem.ValueString())
-	}
-	var org string
-	org = r.Org.ValueString()
-
-	var purpose []string = []string{}
-	for _, purposeItem := range r.Purpose {
-		purpose = append(purpose, purposeItem.ValueString())
-	}
-	var schema string
-	schema = r.Schema.ValueString()
-
-	var tags []string = []string{}
-	for _, tagsItem := range r.Tags {
-		tags = append(tags, tagsItem.ValueString())
-	}
-	var title string
-	title = r.Title.ValueString()
-
-	updatedAt, _ := time.Parse(time.RFC3339Nano, r.UpdatedAt.ValueString())
-	var attachments []interface{} = []interface{}{}
-	for _, attachmentsItem := range r.Attachments {
-		var attachmentsTmp interface{}
-		_ = json.Unmarshal([]byte(attachmentsItem.ValueString()), &attachmentsTmp)
-		attachments = append(attachments, attachmentsTmp)
-	}
-	var bcc []interface{} = []interface{}{}
-	for _, bccItem := range r.Bcc {
-		var bccTmp interface{}
-		_ = json.Unmarshal([]byte(bccItem.ValueString()), &bccTmp)
-		bcc = append(bcc, bccTmp)
-	}
-	body := new(string)
-	if !r.Body.IsUnknown() && !r.Body.IsNull() {
-		*body = r.Body.ValueString()
-	} else {
-		body = nil
-	}
-	brandID := new(float64)
-	if !r.BrandID.IsUnknown() && !r.BrandID.IsNull() {
-		*brandID, _ = r.BrandID.ValueBigFloat().Float64()
-	} else {
-		brandID = nil
-	}
-	var cc []interface{} = []interface{}{}
-	for _, ccItem := range r.Cc {
-		var ccTmp interface{}
-		_ = json.Unmarshal([]byte(ccItem.ValueString()), &ccTmp)
-		cc = append(cc, ccTmp)
-	}
-	createdBy := new(string)
-	if !r.CreatedBy.IsUnknown() && !r.CreatedBy.IsNull() {
-		*createdBy = r.CreatedBy.ValueString()
-	} else {
-		createdBy = nil
-	}
-	var file interface{}
-	if !r.File.IsUnknown() && !r.File.IsNull() {
-		_ = json.Unmarshal([]byte(r.File.ValueString()), &file)
-	}
-	var from interface{}
-	if !r.From.IsUnknown() && !r.From.IsNull() {
-		_ = json.Unmarshal([]byte(r.From.ValueString()), &from)
-	}
-	var name string
-	name = r.Name.ValueString()
-
-	subject := new(string)
-	if !r.Subject.IsUnknown() && !r.Subject.IsNull() {
-		*subject = r.Subject.ValueString()
-	} else {
-		subject = nil
-	}
-	systemTemplate := new(bool)
-	if !r.SystemTemplate.IsUnknown() && !r.SystemTemplate.IsNull() {
-		*systemTemplate = r.SystemTemplate.ValueBool()
-	} else {
-		systemTemplate = nil
-	}
-	var to []interface{} = []interface{}{}
-	for _, toItem := range r.To {
-		var toTmp interface{}
-		_ = json.Unmarshal([]byte(toItem.ValueString()), &toTmp)
-		to = append(to, toTmp)
-	}
-	updatedBy := new(string)
-	if !r.UpdatedBy.IsUnknown() && !r.UpdatedBy.IsNull() {
-		*updatedBy = r.UpdatedBy.ValueString()
-	} else {
-		updatedBy = nil
-	}
-	out := shared.EmailTemplateEntity{
-		CreatedAt:      createdAt,
-		ID:             id,
-		Manifest:       manifest,
-		Org:            org,
-		Purpose:        purpose,
-		Schema:         schema,
-		Tags:           tags,
-		Title:          title,
-		UpdatedAt:      updatedAt,
-		Attachments:    attachments,
-		Bcc:            bcc,
-		Body:           body,
-		BrandID:        brandID,
-		Cc:             cc,
-		CreatedBy:      createdBy,
-		File:           file,
-		From:           from,
-		Name:           name,
-		Subject:        subject,
-		SystemTemplate: systemTemplate,
-		To:             to,
-		UpdatedBy:      updatedBy,
-	}
-	return &out
-}
